Fix routes for STI subclasses and finish articulated resources

--- a/app/views/amendments/edit.html.erb
+++ b/app/views/amendments/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', amendment: @amendment %>
 
-<%= link_to 'Show', @amendment %> |
+<%= link_to 'Show', amendment_path(@amendment) %> |
 <%= link_to 'Back', amendments_path %>
