--- a/app/views/articulateds/_form.html.erb
+++ b/app/views/articulateds/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: [amendment, articulated], local: true) do |form| %>
+<%= form_with(model: [amendment.becomes(Amendment), articulated.becomes(Articulated)], local: true) do |form| %>
   <% if articulated.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(articulated.errors.count, "error") %> prohibited this articulated from being saved:</h2>
@@ -18,7 +18,7 @@
   
   <div class="field">
     <%= form.label :section_id %>
-    <%= form.collection_select :type, current_budget.sections.all, :id, :full_title %>
+    <%= form.collection_select :section_id, current_budget.sections.all, :id, :full_title %>
   </div>
   
   <div class="field">
@@ -49,6 +49,7 @@
 <script type="text/javascript">
   $(function () {
     $("#type input").change(function () {
+      if ($(this).attr('checked', true)) {
         var type = $(this).val();
         if (type == "Articulateds::StandardArticulated") {
           $("#number label").show();
@@ -57,6 +58,7 @@
           $("#number label").hide();
           $("#number input").hide();
         }
+      }
     });
   });
   $( document ).ready(function() {
