--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,36 @@
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container pr-0">
+        <a class="navbar-brand" href="#">NB</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse container" id="main_nav">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <%= link_to 'Amendments', amendments_path, class:"nav-link" %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'New Amendment', new_amendment_path, class:"nav-link" %>
+            </li>
+            </li>
+          </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+            <% if user_signed_in? %>
+              <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+            <% else %>
+              <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
