Create pseudoiframe input for choices and integrate it in modifications

--- a/app/views/amendments/index.html.erb
+++ b/app/views/amendments/index.html.erb
@@ -15,7 +15,7 @@
   </thead>
 
   <tbody>
-    <% @amendments.each do |amendment| %>
+    <% amendments.each do |amendment| %>
       <tr>
         <td><%= amendment.number %></td>
         <td><%= amendment.type_name %></td>
