--- a/app/views/modifications/new.html.erb
+++ b/app/views/modifications/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Modification</h1>
 
-<%= render 'form', amendment: @amendment, modification: @modification %>
+<%= render 'form', amendment: amendment, modification: @modification %>
 
-<%= link_to 'Back', amendment_path(@amendment) %>
+<%= link_to 'Back', amendment_path(amendment) %>
