--- a/app/views/articulateds/edit.html.erb
+++ b/app/views/articulateds/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Articulated</h1>
 
-<%= render 'form', amendment: @amendment, articulated: @articulated %>
+<%= render 'form', amendment: amendment, articulated: articulated %>
 
-<%= link_to 'Back', amendment_path(@amendment) %>
+<%= link_to 'Back', amendment_path(amendment) %>
