--- a/app/views/amendments/browse_section.html.erb
+++ b/app/views/amendments/browse_section.html.erb
@@ -1,6 +1,6 @@
 <div>
   <% if section %>
-    <%= browse_title(section, browse_section_amendment_path(section_id: section)) %>
+    <%= browse_title(section, browse_section_amendment_path) %>
   <% else %>
     <% current_budget.sections.each do |section| %>
       <%= browse_link(section, browse_section_amendment_path(section_id: section)) %>
@@ -8,7 +8,7 @@
   <% end %>
 
   <% if service %>
-    <%= browse_title(service, browse_section_amendment_path(section_id: section, service_id: service)) %>
+    <%= browse_title(service, browse_section_amendment_path(section_id: section)) %>
   <% elsif section %>
       <hr>
       <% section.services.each do |service| %>
@@ -17,17 +17,12 @@
   <% end %>
 
   <% if program %>
-    <%= browse_title(program, browse_section_amendment_path(section_id: section, service_id: service, program_id: program)) %>
+    <%= browse_title(program, browse_section_amendment_path(section_id: section, service_id: service)) %>
   <% elsif section && service %>
       <hr>
       <% section.programs.each do |program| %>
         <%= browse_link(program, browse_section_amendment_path(section_id: section, service_id: service, program_id: program)) %>
       <% end %>
-  <% end %>
-
-  <% if section %>
-    <hr>
-    <%= link_to 'Reset', :browse_section_amendment, class: 'btn btn-primary' %>
   <% end %>
 </div>
 
