--- a/app/views/amendments/browse_section.html.erb
+++ b/app/views/amendments/browse_section.html.erb
@@ -1,27 +1,32 @@
 <div>
   <% if section %>
-    <%= browse_title(section, browse_section_amendment_path) %>
+    <% if locked_section? %>
+      <%= reset_link(browse_section_amendment_path(locked_section: locked_section?)) %>
+    <% end %>
+    <%= browse_title(section) %>
   <% else %>
     <% current_budget.sections.each do |section| %>
-      <%= browse_link(section, browse_section_amendment_path(section_id: section)) %>
+      <%= browse_link(section, browse_section_amendment_path(section_id: section, locked_section: locked_section?)) %>
     <% end %>
   <% end %>
 
   <% if service %>
-    <%= browse_title(service, browse_section_amendment_path(section_id: section)) %>
+    <%= reset_link(browse_section_amendment_path(section_id: section, locked_section: locked_section?)) %>
+    <%= browse_title(service) %>
   <% elsif section %>
       <hr>
       <% section.services.each do |service| %>
-        <%= browse_link(service, browse_section_amendment_path(section_id: section, service_id: service)) %>
+        <%= browse_link(service, browse_section_amendment_path(section_id: section, service_id: service, locked_section: locked_section?)) %>
       <% end %>
   <% end %>
 
   <% if program %>
-    <%= browse_title(program, browse_section_amendment_path(section_id: section, service_id: service)) %>
+    <%= reset_link(browse_section_amendment_path(section_id: section, service_id: service, locked_section: locked_section?)) %>
+    <%= browse_title(program) %>
   <% elsif section && service %>
       <hr>
       <% section.programs.each do |program| %>
-        <%= browse_link(program, browse_section_amendment_path(section_id: section, service_id: service, program_id: program)) %>
+        <%= browse_link(program, browse_section_amendment_path(section_id: section, service_id: service, program_id: program, locked_section: locked_section?)) %>
       <% end %>
   <% end %>
 </div>
