--- a/app/views/amendments/show.html.erb
+++ b/app/views/amendments/show.html.erb
@@ -25,7 +25,7 @@
   <%= amendment.budget.title %>
 </p>
 
-<% if amendment.allow_articulateds? %>
+<% if amendment.allow_articulated? %>
   <h2>Articulado</h2>
   
   <% if amendment.articulated %>
