--- a/app/views/amendments/show.html.erb
+++ b/app/views/amendments/show.html.erb
@@ -92,4 +92,4 @@
 <% end %>
 <hr>
 <%= link_to 'Edit', edit_amendment_path(amendment) %> |
-<%= link_to 'Back', amendments_path %>
+<%= link_to 'Back', budget_amendments_path(budget) %>
