--- a/app/views/amendments/_form.html.erb
+++ b/app/views/amendments/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with(model: amendment.becomes(Amendment), local: true) do |form| %>
+<%= form_with(model: [budget, amendment.becomes(Amendment)], local: true) do |form| %>
+
   <% if amendment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(amendment.errors.count, "error") %> prohibited this amendment from being saved:</h2>
