--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,21 +12,12 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container pr-0">
-        <a class="navbar-brand" href="#">NB</a>
+        <%= link_to 'National Budgets', budgets_path, class: 'navbar-brand' %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse container" id="main_nav">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <%= link_to 'Amendments', amendments_path, class:"nav-link" %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'New Amendment', new_amendment_path, class:"nav-link" %>
-            </li>
-            </li>
-          </ul>
           <ul class="navbar-nav">
             <li class="nav-item">
             <% if user_signed_in? %>
