--- a/app/views/articulateds/_form.html.erb
+++ b/app/views/articulateds/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   
   <div class="field">
-    <%= form.label :section_id %>
+    <%= form.label :section %>
     <%= form.collection_select :section_id, budget.sections.all, :id, :full_title %>
   </div>
   
