--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NationalBudgets</title>
+    <title><%= t(:site_title) %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -12,7 +12,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container pr-0">
-        <%= link_to 'National Budgets', budgets_path, class: 'navbar-brand' %>
+        <%= link_to t(:site_title), budgets_path, class: 'navbar-brand' %>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main_nav" aria-controls="main_nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -21,9 +21,9 @@
           <ul class="navbar-nav">
             <li class="nav-item">
             <% if user_signed_in? %>
-              <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+              <%= link_to t('active_admin.logout'), destroy_user_session_path, method: :delete, class: 'nav-link' %>
             <% else %>
-              <%= link_to 'Log in', new_user_session_path, class: 'nav-link' %>
+              <%= link_to t('active_admin.devise.login.title'), new_user_session_path, class: 'nav-link' %>
             <% end %>
           </ul>
         </div>
