--- a/app/views/modifications/edit.html.erb
+++ b/app/views/modifications/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Edit Modification</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render 'form', modification: modification %>
 
-<%= link_to 'Back', amendment_path(amendment) %>
+<%= link_to t('helpers.action.back'), amendment_path(amendment) %>
