Partial and helper for flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
       </div>
     </nav>
     <div class="container">
+      <%= render "partials/flash_message" %>
       <%= yield %>
     </div>
   </body>
